# delivery

./: .gitignore  README.md  pom.xml  pyproject.toml
src/main/java/libs/ddd/: Aggregate.java  AggregateRoot.java  DomainEvent.java  ValueObject.java
src/main/java/libs/errs/: DomainInvariantException.java  Error.java  GeneralErrors.java  Guard.java  Result.java  UnitResult.java
src/main/python/libs/ddd/: aggregate.py  aggregate_root.py  base_entity.py  domain_event.py  domain_event_publisher.py  value_object.py
src/main/python/libs/errs/: __init__.py  domain_invariant_exception.py  error.py  guard.py  result.py  unit_result.py
src/main/python/microarch/: dependencies.py
src/main/python/microarch/delivery/: __init__.py  application_properties.py  default_domain_event_publisher.py  global_exception_handler.py  main.py
src/main/python/microarch/delivery/core/domain/: uow.py
src/main/python/microarch/delivery/core/domain/model/courier/: __init__.py  courier.py  storage_place.py
src/main/python/microarch/delivery/core/domain/model/kernel/: location.py  speed.py  volume.py
src/main/python/microarch/delivery/core/domain/model/order/: __init__.py  enums.py  order.py
src/main/python/microarch/delivery/core/domain/services/: order_dispatcher.py
src/main/python/microarch/delivery/core/ports/: courier_repository.py  order_repository.py
src/main/resources/: application.yml
src/test/python/: conftest.py  constants.py  helpers.py
src/test/python/microarch/delivery/core/domain/model/courier/: test_courier.py  test_storage_place.py
src/test/python/microarch/delivery/core/domain/model/kernel/: test_location.py  (+2 more)
src/test/python/microarch/delivery/core/domain/services/: test_order_dispatcher.py
(+1 files in other folders)
