[project]
name = "delivery"
version = "1.0.0"
description = ""
authors = [
    {name = "Maksim Zaikin",email = "maksim.zaikin@raiffeisen.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "psycopg (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]



[tool.mypy]
allow_redefinition = true
disallow_incomplete_defs = true
files = "."
ignore_missing_imports = true
python_version = "3.13"
strict_optional = true
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["src/test"]

[tool.coverage.run]
branch = true
omit = [
  ".venv/*",
  "src_python/tests/*"
]

[tool.coverage.report]
exclude_lines = [
  'pragma: not covered',
  '@overload',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":',
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "EM",
  "FBT",
  "TRY003",
  "D",
  "D103",
  "D107",
  "G004",
  "RUF001",
  "RUF002",
  "RUF003",
  "FA102",
  "D203",
  "D205",
  "D213",
  "TC001",
  "FAST002",
]

[tool.ruff.lint.per-file-ignores]
"src/test/**/*.py" = ["S101", "D1", "ANN101", "ANN201", "PLR2004", "SLF001", "PT011", "ARG001", "PLR0913", "S608"]